Fixed event image scaling on mobile

--- a/events-style.css
+++ b/events-style.css
@@ -249,13 +249,14 @@ p{
 	justify-content: center;
 	flex-wrap: wrap;
 	margin-top: 50px;
+	width: 100%;
 }
 #events .events-loading{
 	font-size: 2.5rem;
 }
 #events .events-prev{
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
 	flex-wrap: wrap;
 	margin-top: 50px;
@@ -277,7 +278,7 @@ p{
 	overflow: hidden;
 }
 #events .events-item .events-info{
-	height: 175px;
+	/*height: 175px;*/
 	overflow: hidden;
 }
 #events .events-item .events-info h1{
@@ -403,6 +404,9 @@ p{
 	}
 	#events .events-item{
 		float: left;
+	}
+	#events .events-info{
+		height: 175px;
 	}
 	#membership .container{
 		min-height: 60vh;
